src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_pg_legacy_name__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: PgLegacyName,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: PgLegacyName,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
